# ai-digest

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/skills/generate-architecture-diagrams/: SKILL.md  examples.md
.github/workflows/: deploy.yml
deploy/: README.md  ai-digest-approver.service
digest/: approver.py  orchestrator.py  pipeline.py
digest/agents/: analyst.py  approval.py  clusterer.py  collector.py  discovery.py  ingestor.py  processor.py  publisher.py  quality_gate.py  reporter.py  translator.py  writer.py
digest/config/: feeds.yaml  settings.yaml
digest/core/: backends.py  config.py  content_types.py  digest_types.py  jsonutil.py  models.py  post_state.py  render.py  router.py  search.py  state.py  telegram.py  timing.py
digest/tests/: test_analyst.py  test_approval.py  test_backends.py  test_clusterer.py  test_collector.py  test_config.py  test_content_types.py  test_digest_types.py  test_discovery.py  test_entrypoints.py  test_ingestor.py  test_jsonutil.py  test_models.py  test_pipeline.py  test_post_state.py  test_processor.py  test_publisher.py  test_quality_gate.py  test_render.py  test_reporter.py  test_router.py  test_search.py  test_state.py  test_telegram.py  test_translator.py  test_writer.py
docs/: ARCHITECTURE.md  SETUP.md
docs/architecture/: ai-digest-architecture.dot  diagram.py
docs/superpowers/plans/: 2026-06-16-milestone-1-core-foundation.md  2026-06-16-milestone-2-ingestion.md  2026-06-16-milestone-4-content.md  (+3 more)
scripts/: daily.sh
site/: hugo.toml
site/i18n/: en.toml  vi.toml
site/layouts/: index.html
(+123 files in other folders)
