[project]
name = "ai-digest"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]

[tool.pytest.ini_options]
testpaths = ["digest/tests"]
addopts = "-ra"

[tool.setuptools.packages.find]
include = ["digest*"]
